--- a/demo/demo.html
+++ b/demo/demo.html
@@ -20,9 +20,9 @@
 		$('img').load(function () {
 			var options = {
 				initAreas: [
-					//{"x": 280, "y": 93, "width": 50, "height": 50},
-					{"x": 309, "y": 195, "width": 183, "height": 386}],
-					//{"x": 298, "y": 5, "width": 45, "height": 55}], 
+					{"type": "rect", "x": 280, "y": 93, "width": 50, "height": 50},
+					{"type": "rect", "x": 309, "y": 195, "width": 183, "height": 386},
+					{"type": "rect", "x": 298, "y": 5, "width": 45, "height": 55}], 
 				fixRatio: true
 			};
 			$(this).areaSelect(options);
